Align fixed menu when scroll down

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1494,7 +1494,7 @@ a {
   border-radius: 100px;
   display: flex;
   justify-content: space-between;
-  left: 58px;
+  left: 290px;
   padding: 20px 96px;
   width: 1324px;
 }
